feat: add JAVA_OPTS to entrypoint scripts